exr texture support

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=159,85
-Size=1277,718
+Pos=381,81
+Size=1205,677
 Collapsed=0
 
 [Window][Logs]
@@ -205,7 +205,7 @@ Size=311,105
 Collapsed=0
 
 [Window][Add Object]
-Pos=750,445
+Pos=691,550
 Size=114,65
 Collapsed=0
 
@@ -288,7 +288,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y S
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=351,527 Selected=0xD7907EC4
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x1664F641
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x86DC5FE7
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1306,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
