--- a/ExampleApp/packages.config
+++ b/ExampleApp/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="directxtex_desktop_win10" version="2025.10.28.1" targetFramework="native" />
   <package id="Microsoft.Direct3D.D3D12" version="1.618.2" targetFramework="native" />
+  <package id="openexr-msvc-x64" version="2.3.0.8788" targetFramework="native" />
   <package id="vcpkg.C.vcpkgrepo.vcpkg" version="1.0.0" targetFramework="native" />
 </packages>
