--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Content\AssetImporter.cpp" />
+    <ClCompile Include="Content\Auxiliary\DirectXTexEXR.cpp" />
     <ClCompile Include="Content\ContentManagement.cpp" />
     <ClCompile Include="Content\EditorContentManager.cpp" />
     <ClCompile Include="Content\EnvironmentMapProcessing.cpp" />
@@ -224,6 +225,9 @@
     <ClInclude Include="Common\StandardTypes.h" />
     <ClInclude Include="Content\Asset.h" />
     <ClInclude Include="Content\AssetImporter.h" />
+    <ClInclude Include="Content\Auxiliary\DirectXTexEXR.h" />
+    <ClInclude Include="Content\Auxiliary\DirectXTexP.h" />
+    <ClInclude Include="Content\Auxiliary\scoped.h" />
     <ClInclude Include="Content\ContentManagement.h" />
     <ClInclude Include="Content\EngineShaders.h" />
     <ClInclude Include="Content\PhysicsImporter.h" />
@@ -368,6 +372,7 @@
     <Import Project="..\packages\Microsoft.Direct3D.DXC.1.8.2505.32\build\native\Microsoft.Direct3D.DXC.targets" Condition="Exists('..\packages\Microsoft.Direct3D.DXC.1.8.2505.32\build\native\Microsoft.Direct3D.DXC.targets')" />
     <Import Project="..\packages\Microsoft.Direct3D.D3D12.1.618.2\build\native\Microsoft.Direct3D.D3D12.targets" Condition="Exists('..\packages\Microsoft.Direct3D.D3D12.1.618.2\build\native\Microsoft.Direct3D.D3D12.targets')" />
     <Import Project="..\packages\directxtex_desktop_win10.2025.10.28.1\build\native\directxtex_desktop_win10.targets" Condition="Exists('..\packages\directxtex_desktop_win10.2025.10.28.1\build\native\directxtex_desktop_win10.targets')" />
+    <Import Project="..\packages\openexr-msvc-x64.2.3.0.8788\build\native\OpenEXR-msvc-x64.targets" Condition="Exists('..\packages\openexr-msvc-x64.2.3.0.8788\build\native\OpenEXR-msvc-x64.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -378,5 +383,6 @@
     <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.618.2\build\native\Microsoft.Direct3D.D3D12.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.618.2\build\native\Microsoft.Direct3D.D3D12.props'))" />
     <Error Condition="!Exists('..\packages\Microsoft.Direct3D.D3D12.1.618.2\build\native\Microsoft.Direct3D.D3D12.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Direct3D.D3D12.1.618.2\build\native\Microsoft.Direct3D.D3D12.targets'))" />
     <Error Condition="!Exists('..\packages\directxtex_desktop_win10.2025.10.28.1\build\native\directxtex_desktop_win10.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\directxtex_desktop_win10.2025.10.28.1\build\native\directxtex_desktop_win10.targets'))" />
+    <Error Condition="!Exists('..\packages\openexr-msvc-x64.2.3.0.8788\build\native\OpenEXR-msvc-x64.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\openexr-msvc-x64.2.3.0.8788\build\native\OpenEXR-msvc-x64.targets'))" />
   </Target>
 </Project>
