--- a/MofuEngine/packages.config
+++ b/MofuEngine/packages.config
@@ -3,4 +3,5 @@
   <package id="directxtex_desktop_win10" version="2025.10.28.1" targetFramework="native" />
   <package id="Microsoft.Direct3D.D3D12" version="1.618.2" targetFramework="native" />
   <package id="Microsoft.Direct3D.DXC" version="1.8.2505.32" targetFramework="native" />
+  <package id="openexr-msvc-x64" version="2.3.0.8788" targetFramework="native" />
 </packages>
