compute queue, creating cubemaps on the compute queue

--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="Content\AssetImporter.cpp" />
     <ClCompile Include="Content\Auxiliary\DirectXTexEXR.cpp" />
     <ClCompile Include="Content\ContentManagement.cpp" />
+    <ClCompile Include="Content\D3D12EnvironmentMapProcessing.cpp" />
     <ClCompile Include="Content\EditorContentManager.cpp" />
     <ClCompile Include="Content\EnvironmentMapProcessing.cpp" />
     <ClCompile Include="Content\Guid.cpp" />
@@ -229,6 +230,7 @@
     <ClInclude Include="Content\Auxiliary\DirectXTexP.h" />
     <ClInclude Include="Content\Auxiliary\scoped.h" />
     <ClInclude Include="Content\ContentManagement.h" />
+    <ClInclude Include="Content\D3D12EnvironmentMapProcessing.h" />
     <ClInclude Include="Content\EngineShaders.h" />
     <ClInclude Include="Content\PhysicsImporter.h" />
     <ClInclude Include="Content\Shaders\ContentProcessingShaders.h" />
