applying reflections in post process

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=510,183
-Size=1130,635
+Pos=46,28
+Size=732,411
 Collapsed=0
 
 [Window][Logs]
@@ -146,13 +146,13 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=94,19
+Pos=390,41
 Size=664,847
 Collapsed=0
 
 [Window][Material View]
-Pos=1188,1
-Size=380,679
+Pos=1202,52
+Size=382,805
 Collapsed=0
 
 [Window][FBX Import Summary]
@@ -195,8 +195,8 @@ IsChild=1
 Size=1019,260
 
 [Window][Rendering]
-Pos=1225,275
-Size=365,599
+Pos=1224,101
+Size=366,599
 Collapsed=0
 
 [Window][Delete?]
@@ -205,7 +205,7 @@ Size=311,105
 Collapsed=0
 
 [Window][Add Object]
-Pos=978,475
+Pos=1070,510
 Size=114,65
 Collapsed=0
 
@@ -278,6 +278,16 @@ Column 10 Width=19
 Column 11 Width=19
 Column 12 Width=19
 Column 13 Width=19
+
+[Table][0xEE138C84,2]
+RefScale=13
+Column 0  Width=116
+Column 1  Weight=2.0000
+
+[Table][0x85A60262,2]
+RefScale=13
+Column 0  Width=126
+Column 1  Weight=2.0000
 
 [Docking][Data]
 DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y Selected=0x5E5F7166
