--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,8 +104,8 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=46,28
-Size=732,411
+Pos=472,354
+Size=827,465
 Collapsed=0
 
 [Window][Logs]
@@ -151,7 +151,7 @@ Size=664,847
 Collapsed=0
 
 [Window][Material View]
-Pos=1202,52
+Pos=1182,67
 Size=382,805
 Collapsed=0
 
@@ -196,7 +196,7 @@ Size=1019,260
 
 [Window][Rendering]
 Pos=1224,101
-Size=366,599
+Size=366,738
 Collapsed=0
 
 [Window][Delete?]
@@ -205,7 +205,7 @@ Size=311,105
 Collapsed=0
 
 [Window][Add Object]
-Pos=1070,510
+Pos=872,696
 Size=114,65
 Collapsed=0
 
@@ -298,7 +298,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y S
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=661,527 Selected=0xD7907EC4
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x86DC5FE7
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x1664F641
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1306,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
