--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -10,8 +10,8 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
-Pos=500,19
-Size=437,598
+Pos=17,19
+Size=6,38
 Collapsed=0
 DockId=0x00000003,0
 
@@ -96,7 +96,7 @@ Collapsed=0
 
 [Window][WindowOverViewport_11111111]
 Pos=0,19
-Size=1600,881
+Size=32,32
 Collapsed=0
 
 [Window][DockSpaceHost]
@@ -104,13 +104,13 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=472,354
-Size=827,465
+Pos=149,220
+Size=933,524
 Collapsed=0
 
 [Window][Logs]
-Pos=939,19
-Size=661,598
+Pos=25,19
+Size=7,19
 Collapsed=0
 DockId=0x00000004,0
 
@@ -132,7 +132,7 @@ DockId=0x0000000B,0
 
 [Window][Scene hierarchy]
 Pos=0,19
-Size=498,598
+Size=15,19
 Collapsed=0
 DockId=0x00000001,0
 
@@ -146,12 +146,12 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=390,41
+Pos=457,41
 Size=664,847
 Collapsed=0
 
 [Window][Material View]
-Pos=1182,67
+Pos=1111,50
 Size=382,805
 Collapsed=0
 
@@ -168,8 +168,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Content Browser]
-Pos=0,619
-Size=1600,281
+Pos=0,36
+Size=32,38
 Collapsed=0
 DockId=0x00000008,0
 
@@ -195,8 +195,8 @@ IsChild=1
 Size=1019,260
 
 [Window][Rendering]
-Pos=1224,101
-Size=366,738
+Pos=1218,111
+Size=375,746
 Collapsed=0
 
 [Window][Delete?]
@@ -205,7 +205,7 @@ Size=311,105
 Collapsed=0
 
 [Window][Add Object]
-Pos=872,696
+Pos=756,730
 Size=114,65
 Collapsed=0
 
@@ -290,15 +290,15 @@ Column 0  Width=126
 Column 1  Weight=2.0000
 
 [Docking][Data]
-DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y Selected=0x5E5F7166
+DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=32,32 Split=Y Selected=0x5E5F7166
   DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,617 Split=X
     DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=498,900 Selected=0xBE5CABD5
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1100,900 Split=X Selected=0x15E43931
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=437,527 CentralNode=1 Selected=0x5E5F7166
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=661,527 Selected=0xD7907EC4
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=473,527 CentralNode=1 Selected=0x5E5F7166
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=625,527 Selected=0xD7907EC4
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
-      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x1664F641
+      DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x86DC5FE7
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1306,510 Selected=0x3DF3100E
     DockNode    ID=0x0000000B Parent=0x00000006 SizeRef=1362,244 Selected=0x36AF052B
 
