resolve pass and dlss fix

--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -11,7 +11,7 @@ DockId=0x00000003,0
 
 [Window][Dear ImGui Demo]
 Pos=500,19
-Size=473,598
+Size=884,598
 Collapsed=0
 DockId=0x00000003,0
 
@@ -104,13 +104,14 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=209,202
-Size=973,547
+Pos=500,19
+Size=884,598
 Collapsed=0
+DockId=0x00000003,1
 
 [Window][Logs]
-Pos=975,19
-Size=625,598
+Pos=1386,19
+Size=214,598
 Collapsed=0
 DockId=0x00000004,0
 
@@ -151,7 +152,7 @@ Size=664,847
 Collapsed=0
 
 [Window][Material View]
-Pos=1111,50
+Pos=1203,5
 Size=382,805
 Collapsed=0
 
@@ -195,7 +196,7 @@ IsChild=1
 Size=1019,260
 
 [Window][Rendering]
-Pos=1229,120
+Pos=1276,198
 Size=355,676
 Collapsed=0
 
@@ -205,7 +206,7 @@ Size=311,105
 Collapsed=0
 
 [Window][Add Object]
-Pos=422,425
+Pos=841,608
 Size=114,65
 Collapsed=0
 
@@ -294,8 +295,8 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y S
   DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,617 Split=X
     DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=498,900 Selected=0xBE5CABD5
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1100,900 Split=X Selected=0x15E43931
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=473,527 CentralNode=1 Selected=0x5E5F7166
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=625,527 Selected=0xD7907EC4
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=884,527 CentralNode=1 Selected=0x15E43931
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=214,527 Selected=0xD7907EC4
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
       DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x86DC5FE7
