--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,10 +104,9 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=500,19
-Size=884,598
+Pos=132,58
+Size=1278,718
 Collapsed=0
-DockId=0x00000003,1
 
 [Window][Logs]
 Pos=1386,19
@@ -147,7 +146,7 @@ Size=323,104
 Collapsed=0
 
 [Window][Texture View]
-Pos=447,15
+Pos=448,15
 Size=664,847
 Collapsed=0
 
@@ -196,7 +195,7 @@ IsChild=1
 Size=1019,260
 
 [Window][Rendering]
-Pos=1276,198
+Pos=1265,2
 Size=355,676
 Collapsed=0
 
@@ -206,7 +205,7 @@ Size=311,105
 Collapsed=0
 
 [Window][Add Object]
-Pos=841,608
+Pos=753,443
 Size=114,65
 Collapsed=0
 
@@ -295,7 +294,7 @@ DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y S
   DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,617 Split=X
     DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=498,900 Selected=0xBE5CABD5
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1100,900 Split=X Selected=0x15E43931
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=884,527 CentralNode=1 Selected=0x15E43931
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=884,527 CentralNode=1 Selected=0x5E5F7166
       DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=214,527 Selected=0xD7907EC4
   DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
