--- a/ExampleApp/imgui.ini
+++ b/ExampleApp/imgui.ini
@@ -104,13 +104,14 @@ Size=400,600
 Collapsed=0
 
 [Window][Scene View]
-Pos=132,58
-Size=1278,718
+Pos=500,19
+Size=830,531
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][Logs]
-Pos=1386,19
-Size=214,598
+Pos=1332,19
+Size=268,531
 Collapsed=0
 DockId=0x00000004,0
 
@@ -132,7 +133,7 @@ DockId=0x0000000B,0
 
 [Window][Scene hierarchy]
 Pos=0,19
-Size=498,598
+Size=498,531
 Collapsed=0
 DockId=0x00000001,0
 
@@ -168,8 +169,8 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Content Browser]
-Pos=0,619
-Size=1600,281
+Pos=0,552
+Size=1600,348
 Collapsed=0
 DockId=0x00000008,0
 
@@ -195,9 +196,10 @@ IsChild=1
 Size=1019,260
 
 [Window][Rendering]
-Pos=1265,2
-Size=355,676
+Pos=1332,19
+Size=268,531
 Collapsed=0
+DockId=0x00000004,1
 
 [Window][Delete?]
 Pos=644,397
@@ -291,12 +293,12 @@ Column 1  Weight=2.0000
 
 [Docking][Data]
 DockSpace       ID=0x08BD597D Window=0x1BBC0F80 Pos=0,19 Size=1600,881 Split=Y Selected=0x5E5F7166
-  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,617 Split=X
+  DockNode      ID=0x00000005 Parent=0x08BD597D SizeRef=1600,531 Split=X
     DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=498,900 Selected=0xBE5CABD5
     DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1100,900 Split=X Selected=0x15E43931
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=884,527 CentralNode=1 Selected=0x5E5F7166
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=214,527 Selected=0xD7907EC4
-  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,281 Split=X Selected=0x36AF052B
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=830,527 CentralNode=1 Selected=0x15E43931
+      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=268,527 Selected=0xCEB1220F
+  DockNode      ID=0x00000006 Parent=0x08BD597D SizeRef=1600,348 Split=X Selected=0x36AF052B
     DockNode    ID=0x0000000A Parent=0x00000006 SizeRef=236,244 Split=X Selected=0x86DC5FE7
       DockNode  ID=0x00000007 Parent=0x0000000A SizeRef=292,510 Selected=0x86DC5FE7
       DockNode  ID=0x00000008 Parent=0x0000000A SizeRef=1306,510 Selected=0x3DF3100E
