--- a/MofuEngine/MofuEngine.vcxproj
+++ b/MofuEngine/MofuEngine.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Editor\MaterialEditor.cpp" />
     <ClCompile Include="Editor\ObjectAddInterface.cpp" />
     <ClCompile Include="Editor\ObjectPicker.cpp" />
+    <ClCompile Include="Editor\ParticleEditor.cpp" />
     <ClCompile Include="Editor\PhysicsEditor\PhysicsShapesInterface.cpp" />
     <ClCompile Include="Editor\PrefabView.cpp" />
     <ClCompile Include="Editor\Project\Project.cpp" />
@@ -203,6 +204,7 @@
     <ClCompile Include="Graphics\D3D12\DXRHelpers.cpp" />
     <ClCompile Include="Graphics\D3D12\Lights\D3D12Light.cpp" />
     <ClCompile Include="Graphics\D3D12\Lights\D3D12LightCulling.cpp" />
+    <ClCompile Include="Graphics\D3D12\Particles\D3D12ParticleSystem.cpp" />
     <ClCompile Include="Graphics\GeometryData.cpp" />
     <ClCompile Include="Graphics\Lights\Light.cpp" />
     <ClCompile Include="Graphics\Renderer.cpp" />
@@ -277,6 +279,7 @@
     <ClInclude Include="Editor\MaterialEditor.h" />
     <ClInclude Include="Editor\ObjectAddInterface.h" />
     <ClInclude Include="Editor\ObjectPicker.h" />
+    <ClInclude Include="Editor\ParticleEditor.h" />
     <ClInclude Include="Editor\PhysicsEditor\PhysicsShapesInterface.h" />
     <ClInclude Include="Editor\PrefabView.h" />
     <ClInclude Include="Editor\Project\Project.h" />
@@ -331,6 +334,7 @@
     <ClInclude Include="Graphics\D3D12\GPassCache.h" />
     <ClInclude Include="Graphics\D3D12\Lights\D3D12Light.h" />
     <ClInclude Include="Graphics\D3D12\Lights\D3D12LightCulling.h" />
+    <ClInclude Include="Graphics\D3D12\Particles\D3D12ParticleSystem.h" />
     <ClInclude Include="Graphics\GeometryData.h" />
     <ClInclude Include="Graphics\GraphicsPlatform.h" />
     <ClInclude Include="Graphics\GraphicsPlatformInterface.h" />
